tests/test66.rael.exp
Error [tests/test66.rael:1:5]: Unrecognized token
| log rael
|     ^
